--- a/.github/workflows/playwright-test.yml
+++ b/.github/workflows/playwright-test.yml
@@ -18,7 +18,13 @@ jobs:
       with:
         node-version: '20'
 
-    - name: Install dependencies
+    - name: Install missing dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libnss3 libxss1 libasound2 libx264-dev libicu-dev libatk1.0-0 libcups2 libdrm2 libgbm1 libglib2.0-0
+        sudo apt-get install -y libatk-bridge2.0-0 libgtk-3-0 libdbus-glib-1-2
+
+    - name: Install Node.js dependencies
       run: npm install
 
     - name: Grant execution permissions for Playwright
