--- a/.github/workflows/playwright-test.yml
+++ b/.github/workflows/playwright-test.yml
@@ -1,25 +1,29 @@
-name: run-playwright-tests
+name: Run Playwright Tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20.x'
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
 
-    - name: Install Dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+      - name: Grant execution permission for Playwright
+        run: |
+          npx playwright install --with-deps
+          chmod +x ./node_modules/.bin/playwright
 
-    - name: Run Playwright Tests in Headless Mode
-      run: npx playwright test --headless --trace on --project=chromium
+      - name: Run Playwright Tests
+        run: npx playwright test
